do check fields on empty value in form-add-component (#7)

--- a/dev/scss/_field.scss
+++ b/dev/scss/_field.scss
@@ -12,6 +12,15 @@
         padding: 8px 12px;
         outline: none;
     }
+    &__error {
+        color: #ff3131;
+        font-size: 14px;
+        margin: 1px 0;
+        display: none;
+    }
+    .error {
+        display: block;
+    }
     &.rounded {
         .field__title {
             position: absolute;
