--- a/dev/scss/_file.scss
+++ b/dev/scss/_file.scss
@@ -15,6 +15,9 @@
             color: silver;
         }
     }
+    .error {
+        color: #ff3131;
+    }
 
     &__label {
         display: flex;
