--- a/dev/scss/_catalog.scss
+++ b/dev/scss/_catalog.scss
@@ -7,6 +7,25 @@
     }
     &-content {
         flex-basis: 79%;
+        display: flex;
+        min-height: 400px;
+        flex-direction: column;
         box-shadow: 0 1px 4px silver;
+        &-items {
+            display: flex;
+            flex-wrap: wrap;
+            height: 100%;
+            justify-content: space-between;
+        }
+        &-pagination {
+            display: flex;
+            justify-content: space-between;
+        }
+        &__item {
+            flex-basis: 49%;
+            display: flex;
+            margin-bottom: 15px;
+            border: solid 1px rgb(252, 150, 150);
+        }
     }
 }
