--- a/dev/scss/_admin.scss
+++ b/dev/scss/_admin.scss
@@ -1,11 +1,49 @@
 .admin-panel {
+    position: relative;
+    z-index: 777;
+    &_active {
+        .admin-panel__inner {
+            left: 0;
+            transition: all .3s;
+        }
+    }
+    &__open {
+        font-size: 16px;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        color: #fff;
+        box-shadow: 2px 2px 20px $theme;
+        position: absolute;
+        z-index: 99;
+        width: 28px;
+        background: $theme;
+        height: 50px;
+        right: -28px;
+        border-radius: 0 25px 25px 0;
+        top: 50%;
+        transform: translateY(-50%);
+        transition: opacity .3s;
+        &:hover {
+            opacity: .85;
+        }
+    }
     &__inner {
         box-shadow: 0 2px 5px silver;
+        background: #fff;
+        border-radius: 0 0 18px 18px;
         margin-bottom: 10px;
+        width: 300px;
         padding: 10px;
+        position: absolute;
+        left: -300px;
+        transition: all .3s;
+        top: 0;
     }
     .form-add-component {
-        width: 300px;
+        width: 100%;
         &__form {
             display: flex;
             flex-direction: column;
