--- a/dev/scss/_card.scss
+++ b/dev/scss/_card.scss
@@ -34,15 +34,17 @@
         transform: translateY(-50%);
         background: #fff;
         width: 70%;
-        box-shadow: 0px 0px 5px $shadow;
+        box-shadow: 0px 0px 3px $theme;
         height: 90%;
         padding: 5px;
+        border-radius: 8px;
         overflow: auto;
         &-inner {
             display: flex;
             flex-direction: column;
             justify-content: space-evenly;
             position: relative;
+            padding: 3px;
         }
         &-close {
             position: absolute;
