--- a/dev/scss/_admin.scss
+++ b/dev/scss/_admin.scss
@@ -53,6 +53,11 @@
         }
         &__btn {
             width: 100%;
+            height: 30px;
+            border-radius: 8px;
+            color: #fff;
+            background: $theme;
+            box-shadow: 2px 2px 2px $shadow;
         }
     }
 }
