--- a/src/template/style.css
+++ b/src/template/style.css
@@ -225,7 +225,13 @@ ul {
       .admin-panel .form-add-component__form input:last-child {
         margin-bottom: 12px; }
     .admin-panel .form-add-component__btn {
-      width: 100%; }
+      width: 100%;
+      height: 30px;
+      border-radius: 8px;
+      color: #fff;
+      background: #2196F3;
+      -webkit-box-shadow: 2px 2px 2px #6dc0ff;
+              box-shadow: 2px 2px 2px #6dc0ff; }
 
 .menu {
   -ms-flex-item-align: start;
@@ -335,16 +341,6 @@ ul {
     border-radius: 8px;
     overflow: auto; }
     .card__props-inner {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-          -ms-flex-direction: column;
-              flex-direction: column;
-      -webkit-box-pack: space-evenly;
-          -ms-flex-pack: space-evenly;
-              justify-content: space-evenly;
       position: relative;
       padding: 3px; }
     .card__props-close {
@@ -367,6 +363,8 @@ ul {
       border: 2px solid #2196F3; }
       .card__props-close:hover {
         opacity: .5; }
+  .card__prop {
+    margin: 5px 0; }
   .card__btn-box {
     margin: 0 20px 0 auto;
     -ms-flex-item-align: center;
