--- a/dev/scss/_menu.scss
+++ b/dev/scss/_menu.scss
@@ -1,6 +1,7 @@
 .menu {
     align-self: flex-start;
-    
+    position: sticky;
+    top: 0;
     &__link {
         width: 100%;
         padding: 10px;
