--- a/dev/scss/_card.scss
+++ b/dev/scss/_card.scss
@@ -1,18 +1,21 @@
 .card {
     flex-basis: 49%;
     display: flex;
-    height: 165px;
     background: #fff;
     box-shadow: 0 3px 5px rgb(212, 212, 212);
     border-radius: 8px;
-    padding: 5px;
+    padding: 15px 8px;
     position: relative;
+    @media (max-width: 833px) {
+        flex-basis: 100%;
+    }
 
     &__content {
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
         margin-left: 10px;
+        width: 60%;
     }
 
     &__title {
@@ -25,6 +28,12 @@
         bottom: 10px;
         font-weight: bold;
         color: #8b8b8b;
+        @media (max-width: 425px) {
+            position: relative;
+            bottom: 0;
+            right: 0;
+            margin-top: 6px;
+        }
     }
 
     &__props {
@@ -61,6 +70,14 @@
         }
     }
 
+    &__preview-props {
+        & .card__prop {
+            @media (max-width: 425px) {
+                display: none;
+            }
+        }
+    }
+
     &__prop {
         margin: 5px 0;
     }
@@ -77,11 +94,21 @@
         border-radius: 25px;
         position: relative;
         box-shadow: 0 0px 5px $theme;
+        @media (max-width: 425px) {
+            margin: 0 5px 0 0;
+            position: absolute;
+            right: 0;
+        }
     }
 
     &__del {
         display: none;
         color: rgb(255, 105, 95);
+        @media (max-width: 425px) {
+            position: absolute;
+            right: 0;
+            top: -5px;
+        }
     }
 
     &__btn-more {
