--- a/dev/scss/_card.scss
+++ b/dev/scss/_card.scss
@@ -5,6 +5,7 @@
     box-shadow: 0 3px 5px rgb(212, 212, 212);
     border-radius: 8px;
     padding: 15px 8px;
+    height: 180px;
     position: relative;
     @media (max-width: 833px) {
         flex-basis: 100%;
