--- a/dev/scss/_field.scss
+++ b/dev/scss/_field.scss
@@ -1,8 +1,8 @@
 .field {
     display: flex;
     flex-direction: column;
-    margin-top: 12px;
     position: relative;
+    margin-bottom: 15px;
     &__title {
         font-size: 14px;
         cursor: text;
