--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -1,8 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 @import 'layout';
+@import 'button';
 @import 'field';
 @import 'file';
 @import 'select';
 @import 'admin';
+@import 'header';
+@import 'logo';
 @import 'menu';
+
+@import 'filter';
+@import 'search';
+@import 'collector-btn';
+
 @import 'catalog';
 @import 'card';
