--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
 @import 'layout';
 @import 'button';
 @import 'field';
 @import 'file';
 @import 'select';
+@import 'auth';
 @import 'admin';
 @import 'header';
 @import 'logo';
@@ -16,3 +17,4 @@
 
 @import 'catalog';
 @import 'card';
+
