--- a/dev/scss/_catalog.scss
+++ b/dev/scss/_catalog.scss
@@ -10,6 +10,7 @@
     }
     &-content {
         flex-basis: 79%;
+        // height: 100px;
         display: flex;
         flex-direction: column;
         @media (max-width: 1023px) {
