add removal components from Collector (#23)

--- a/dev/scss/_collector.scss
+++ b/dev/scss/_collector.scss
@@ -35,11 +35,21 @@
             color: #222;
             border: 2px solid $light;
             background: #fff;
+            align-items: center;
         }
+
         img {
             width: 70px;
             height: auto;
             margin-right: 10px;
+        }
+    }
+
+    &__btn-del {
+        margin-left: auto;
+        color: $theme;
+        span {
+            font-size: 28px;
         }
     }
 
