--- a/dev/scss/_layout.scss
+++ b/dev/scss/_layout.scss
@@ -15,6 +15,7 @@ body {
     color: #222;
     font-family: 'Roboto', sans-serif;
     background: rgb(245, 245, 245);
+    overflow-y: scroll;
 }
 
 a {
