--- a/src/template/style.css
+++ b/src/template/style.css
@@ -8,7 +8,8 @@
 body {
   color: #222;
   font-family: 'Roboto', sans-serif;
-  background: whitesmoke; }
+  background: whitesmoke;
+  overflow-y: scroll; }
 
 a {
   text-decoration: none; }
@@ -587,11 +588,19 @@ ul {
     .collector__item_active {
       color: #222;
       border: 2px solid #90CBF9;
-      background: #fff; }
+      background: #fff;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center; }
     .collector__item img {
       width: 70px;
       height: auto;
       margin-right: 10px; }
+  .collector__btn-del {
+    margin-left: auto;
+    color: #2196F3; }
+    .collector__btn-del span {
+      font-size: 28px; }
 
 @-webkit-keyframes open {
   0% {
